Adding in support for joining streams together.